[package]
name = "rust_block_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.5"
sha2 = "0.9.5"

